--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
-  "name": "cse341-project1",
+  "name": "cse341-week1",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JohnEllefson/cse341-project1.git"
+    "url": "git+https://github.com/DanEllefson/cse341-week1.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "bugs": {
-    "url": "https://github.com/JohnEllefson/cse341-project1/issues"
+    "url": "https://github.com/DanEllefson/cse341-week1/issues"
   },
-  "homepage": "https://github.com/JohnEllefson/cse341-project1#readme",
+  "homepage": "https://github.com/DanEllefson/cse341-week1#readme",
   "description": "",
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  },
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.12.0"
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "globals": "^15.14.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
   }
 }
