--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cse341-week1",
+  "name": "cse341-project1",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -10,16 +10,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DanEllefson/cse341-week1.git"
+    "url": "git+https://github.com/JohnEllefson/cse341-project1.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "bugs": {
-    "url": "https://github.com/DanEllefson/cse341-week1/issues"
+    "url": "https://github.com/JohnEllefson/cse341-project1/issues"
   },
-  "homepage": "https://github.com/DanEllefson/cse341-week1#readme",
+  "homepage": "https://github.com/JohnEllefson/cse341-project1#readme",
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
